--- a/index.html
+++ b/index.html
@@ -196,13 +196,16 @@
       </div>
     </div>
 
-    <footer class="blog-footer"><center>
+    <footer class="blog-footer">
+     <center>
       <p>Tapas Creative Studio</p>
       <p>
         <a href="#">Back to top</a>
       </p>
     </center>
     </footer> 
+                   
+                   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
