--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       </div>
     </div>
 
-    <footer class="blog-footer">
+    <footer class="blog-footer" my-4>
      <center>
       <p>Tapas Creative Studio</p>
       <p>
